# rust-svelte

./: package-lock.json  package.json  rollup.config.js
public/: global.css
src/: App.svelte  Subscribe.svelte  Tailwind.svelte  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs  mqtt.rs
src/Components/: Text.svelte  tooltip.js
src/Components/config/: Configuration.svelte  Subscribe.svelte
